2009-04-14  Amitakhya Phukan <aphukan@fedoraproject.org>

	* po/as.po: Updated translations.

2009-04-14  Runa Bhattacharjee <runab@fedoraproject.org>

	* po/bn_IN.po: Updated translations.

2009-04-14  Sweta Kothari <swkothar@redhat.com>

	* po/gu.po: Updated translations.

2009-04-14  Sandeep Shedmake <sandeep.shedmake@gmail.com>

	* po/mr.po: Updated translations.

2009-04-14  Rui Gouveia <rui.gouveia@globaltek.pt>

	* po/pt.po: Updated translations.

2009-04-14  I. Felix <ifelix@redhat.com>

	* po/ta.po: Updated translations.

2009-04-14  Krishna Babu K <kkrothap@redhat.com>

	* po/te.po: Updated translations.

2009-04-09  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_unix/yppasswd.h: Update license to GPLv2 or later
	on request of Olaf Kirch (Author).
	* modules/pam_unix/yppasswd_xdr.c: Likewise.

2009-04-06  R.E. van der Luit <nippur@fedoraproject.org>

	* po/nl.po: Updated translations.

2009-04-06  Terry Chuang <tchuang@redhat.com>

	* po/zh_TW.po: Updated translations.

2009-04-03  Shankar Prasad <svenkate@redhat.com>

	* po/kn.po: Updated translations.

2009-04-03  Manoj Kumar Giri <mgiri@redhat.com>

	* po/or.po: Updated translations.

2009-04-03  Miloš Komarčević <kmilos@gmail.com>

	* po/sr.po: Updated translations.
	* po/sr@latin.po: Updated translations.

2009-04-03  Leah Liu <lliu@redhat.com>

	* po/zh_CN.po: Updated translations.

2009-04-03  Dmitry V. Levin  <ldv@altlinux.org>

	* libpamc/pamc_load.c (__pamc_exec_agent): Replace call to exit(3)
	in child process with call to _exit(2).
	* modules/pam_mkhomedir/pam_mkhomedir.c (create_homedir): Likewise.
	* modules/pam_unix/pam_unix_acct.c (_unix_run_verify_binary):
	Likewise.
	* modules/pam_unix/pam_unix_passwd.c (_unix_run_update_binary):
	Likewise.
	* modules/pam_unix/support.c (_unix_run_helper_binary): Likewise.
	* modules/pam_xauth/pam_xauth.c (run_coprocess): Likewise.
	* modules/pam_exec/pam_exec.c (call_exec): Replace all calls to
	exit(3) in child process with calls to _exit(2).